@@ -1,6 +1,7 @@
 Revision history for Set::Similarity
 
 {{$NEXT}}
+       - improved travis configuration and badges
 
 0.023  2015-03-31 12:15:04 CEST
        - added badges
